0_current/8_kubeflow/tensorboard.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"labels":{"app":"tensorboard","kustomize.component":"tensorboard"},"name":"tensorboard","namespace":"kubeflow"},"spec":{"replicas":1,"selector":{"matchLabels":{"kustomize.component":"tensorboard"}},"template":{"metadata":{"labels":{"app":"tensorboard","kustomize.component":"tensorboard"}},"spec":{"containers":[{"args":["--logdir=logs","--port=6006"],"command":["/usr/local/bin/tensorboard"],"image":"tensorflow/tensorfl [...]
  creationTimestamp: "2020-11-21T13:19:58Z"
  generation: 1
  labels:
    app: tensorboard
    kustomize.component: tensorboard
  name: tensorboard
  namespace: kubeflow
  resourceVersion: "4457"
  selfLink: /apis/extensions/v1beta1/namespaces/kubeflow/deployments/tensorboard
  uid: 40f9cc9d-2bfc-11eb-b6e6-020034e10001
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      kustomize.component: tensorboard
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: tensorboard
        kustomize.component: tensorboard
    spec:
      containers:
      - args:
        - --logdir=logs
        - --port=6006
        command:
        - /usr/local/bin/tensorboard
        image: tensorflow/tensorflow:1.8.0
        imagePullPolicy: IfNotPresent
        name: tensorboard
        ports:
        - containerPort: 6006
          protocol: TCP
        resources:
          limits:
            cpu: "4"
            memory: 4Gi
          requests:
            cpu: "1"
            memory: 1Gi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  conditions:
  - lastTransitionTime: "2020-11-21T13:19:58Z"
    lastUpdateTime: "2020-11-21T13:20:10Z"
    message: ReplicaSet "tensorboard-6544748d94" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  - lastTransitionTime: "2020-11-21T13:20:22Z"
    lastUpdateTime: "2020-11-21T13:20:22Z"
    message: Deployment does not have minimum availability.
    reason: MinimumReplicasUnavailable
    status: "False"
    type: Available
  observedGeneration: 1
  replicas: 1
  unavailableReplicas: 1
  updatedReplicas: 1
